# VoxelWorld

./: .gitignore  LICENSE  README.md  Untitled.ipynb  Untitled1.ipynb  pyproject.toml  pyvenv.cfg
.github/workflows/: python-package.yml
examples/: jill_of_the_jungle.py  light_source.py  sand_world.py
examples/color_matrix/: earth_tones.py  jill_of_the_jungle.py  sand_world.py
examples/lighting/: light_source.py
examples/pygame/: arrow_keys.py
src/: voxel_world.py
src/voxel_world.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
voxel-world-renderer/voxel-world/: renderer.py
