[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "voxel_world"
authors = [
    {name = "JP", email = "jack.parmer@pm.me"}
]
description = "Delicious Voxel worlds in Python"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "vnoise",
    "numpy",
    "pillow",
    "matplotlib",
    "IPython"
]

[tool.distutils.bdist_wheel]
universal = true
